# kiln

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
base-image/: Kilnfile  README.md  build.sh  fetch-busybox.sh
chat-demo/: Kilnfile  README.md  build.sh  kiln.yaml
chat-demo/server/: chat-server.rs
example/: kiln.yaml
game-demo/: Kilnfile  README.md  build.sh  kiln.yaml
game-demo/server/: game-server.rs
kiln-cli/: Cargo.toml
kiln-cli/src/: cgroup.rs  container.rs  error.rs  healthcheck.rs  lib.rs  main.rs  supervisor.rs
kiln-cli/src/commands/: build.rs  cp.rs  exec.rs  gc.rs  image.rs  images.rs  inspect.rs  key.rs  logs.rs  mod.rs  network.rs  node.rs  ps.rs  pull.rs  push.rs  rm.rs  rmi.rs  run.rs  secret.rs  start.rs  stop.rs  tag.rs  top.rs  volume.rs
kiln-cli/tests/: cp.rs  gc.rs  health_and_restart.rs  ports.rs  resource_limits.rs  restart_policy.rs  security_namespaces.rs  security_seccomp_caps.rs  stop.rs
kiln-compose/: Cargo.toml
kiln-compose/src/: backup.rs  compose.rs  dotenv.rs  main.rs  remote.rs
kiln-compose/tests/: backup_restore.rs  dotenv.rs  down.rs
kiln-image/: Cargo.toml
kiln-image/examples/: mini-registry.rs
kiln-image/src/: build.rs  error.rs  identity.rs  image.rs  kilnfile.rs  layer.rs  lib.rs  registry.rs  scan.rs  secrets.rs  signing.rs  store.rs
kiln-image/tests/: build.rs  dedup.rs  registry_pull.rs
kiln-net-bpf/: Cargo.toml  build.sh
kiln-net-bpf/.cargo/: config.toml
kiln-net-bpf/src/: main.rs
kiln-registry/: Cargo.toml
kiln-registry/src/: auth.rs  gc.rs  handlers.rs  main.rs  server.rs  store.rs  tls.rs
kiln-registry/tests/: gc.rs  rbac.rs  tag_and_push.rs  tls.rs
kilnd/: Cargo.toml
kilnd-core/: Cargo.toml
kilnd-core/examples/: kiln-shell.rs
kilnd-core/src/: cgroups.rs  conn.rs  error.rs  http.rs  lib.rs  namespaces.rs  netbpf.rs  network.rs  rootfs.rs  security.rs
kilnd-core/tests/: cgroups.rs  namespace_isolation.rs  rootfs.rs
kilnd/src/: http.rs  main.rs  server.rs
kilnd/src/handlers/: compose_waiting.rs  containers.rs  exec.rs  images.rs  mod.rs  network_events.rs  networks.rs  nodes.rs  secrets.rs  system.rs  volumes.rs
kilnd/tests/: api.rs
mysql-demo/: kiln.yaml
mysql-demo/api/: Kilnfile  server.py
registry-demo/echo-src/: Kilnfile  start.sh
