[package]
name = "kiln-cli"
version = "0.1.9"
edition = "2021"
description = "kiln: the Kiln container CLI (daemonless by default)."
license = "Apache-2.0"

[lib]
name = "kiln_cli"
path = "src/lib.rs"

[[bin]]
name = "kiln"
path = "src/main.rs"

[dependencies]
kilnd-core = { path = "../kilnd-core" }
kiln-image = { path = "../kiln-image" }
nix = { version = "0.29", features = ["sched", "mount", "process", "signal", "user", "fs", "hostname"] }
libc = "0.2"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
tempfile = "3"
