[package]
name = "kiln-image"
version = "0.1.17"
edition = "2021"
description = "Content-addressed image format, Kilnfile builder, and OCI registry client for Kiln."
license = "Apache-2.0"

[dependencies]
kilnd-core = { path = "../kilnd-core" }
nix = { version = "0.29", features = ["fs", "process", "user", "signal"] }
libc = "0.2"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
tar = "0.4"
flate2 = "1"
ureq = { version = "2", features = ["json"] }
walkdir = "2"
tempfile = "3"
