[package]
name = "kiln-registry"
version = "0.1.26"
edition = "2021"
description = "Self-hosted OCI Distribution registry server for sharing Kiln images."
license = "Apache-2.0"

[[bin]]
name = "kiln-registry"
path = "src/main.rs"

[dependencies]
kilnd-core = { path = "../kilnd-core" }
argon2 = "0.5"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
ureq = "2"
