[package]
name = "kilnd"
version = "0.1.7"
edition = "2021"
description = "kilnd: optional daemon exposing Kiln's runtime over a local Unix socket HTTP API."
license = "Apache-2.0"

[[bin]]
name = "kilnd"
path = "src/main.rs"

[dependencies]
kilnd-core = { path = "../kilnd-core" }
kiln-image = { path = "../kiln-image" }
kiln-cli = { path = "../kiln-cli" }
nix = { version = "0.29", features = ["process", "signal", "term", "sched"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
